--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "clsx": "2.1.1",
     "framer-motion": "11.18.2",
     "intl-messageformat": "10.7.16",
+    "klinecharts": "^10.0.0-alpha5",
     "next": "15.3.1",
     "next-themes": "0.4.6",
     "react": "18.3.1",
